[gd_scene load_steps=16 format=3 uid="uid://c3hs0j0l3dsrr"]

[ext_resource type="Script" path="res://modules/objects/puzzle_pieces/breakable_barrel/breakable_barrel.gd" id="1_65xo1"]
[ext_resource type="Texture2D" uid="uid://cdjm07xrahh71" path="res://assets/environment/Pixel Crawler 1.8/Environment/Dungeon Prison/Assets/Props.png" id="2_f4gt4"]
[ext_resource type="Material" uid="uid://bisbatw7pxu6r" path="res://assets/debug/pixel_perfect_styling/smooth-pixel.tres" id="2_sy0e3"]
[ext_resource type="Script" path="res://addons/shaker/src/Vector2/shaker_component2D.gd" id="3_ke3lh"]
[ext_resource type="Script" path="res://addons/shaker/data/Vector2/BaseShakerType2D.gd" id="4_dlbfx"]
[ext_resource type="Script" path="res://addons/shaker/data/Vector2/ShakerTypeRandom2D.gd" id="5_xgq67"]
[ext_resource type="Script" path="res://addons/shaker/data/Single/BaseShakerType1D.gd" id="6_w70w5"]
[ext_resource type="Script" path="res://addons/shaker/data/Vector2/ShakerPreset2D.gd" id="7_dh27g"]
[ext_resource type="Script" path="res://addons/basecomponents/Components/2D/hurtbox_component_2d.gd" id="9_0sa2f"]
[ext_resource type="Script" path="res://addons/basecomponents/Components/health_component.gd" id="10_b6nhn"]

[sub_resource type="Resource" id="Resource_twx01"]
script = ExtResource("5_xgq67")
seed = 0
amplitude = Vector2(3, 3)
offset = Vector2(0, 0)
BlendingMode = 0
fade_in = 0.0
fade_out = 0.0
start_percent = 0.0
end_percent = 1.0
_temp_graph = false
bake_internal = 64

[sub_resource type="Resource" id="Resource_qslon"]
script = ExtResource("7_dh27g")
PositionShake = Array[ExtResource("4_dlbfx")]([SubResource("Resource_twx01")])
RotationShake = Array[ExtResource("6_w70w5")]([])
ScaleShake = Array[ExtResource("4_dlbfx")]([])
bake_internal = 64
__follow_timeline = false

[sub_resource type="AtlasTexture" id="AtlasTexture_k4h81"]
atlas = ExtResource("2_f4gt4")
region = Rect2(151, 87, 2, 4)

[sub_resource type="Curve" id="Curve_82kww"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.479661), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_3jyob"]
radius = 12.0

[node name="BreakableBarrel" type="CharacterBody2D" groups=["barrel", "saved_data", "tetherable_body"]]
z_index = 1
y_sort_enabled = true
collision_layer = 304
collision_mask = 4
script = ExtResource("1_65xo1")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("2_sy0e3")
position = Vector2(4.32134e-07, -1.04308e-07)
texture = ExtResource("2_f4gt4")
region_enabled = true
region_rect = Rect2(16, 10, 16, 22)

[node name="ShakerComponent2D" type="Node2D" parent="Sprite2D"]
script = ExtResource("3_ke3lh")
duration = 0.1
shakerPreset = SubResource("Resource_qslon")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 3
lifetime = 0.5
one_shot = true
explosiveness = 1.0
texture = SubResource("AtlasTexture_k4h81")
emission_shape = 3
emission_rect_extents = Vector2(5, 5)
particle_flag_align_y = true
direction = Vector2(0, -1)
gravity = Vector2(0, 400)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
angle_min = 43.0
angle_max = 43.0
scale_amount_curve = SubResource("Curve_82kww")

[node name="BodyCollider" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, 9, 5, 8, 7, 5, 7, 2, 5, 0, 0, -1, -5, 0, -7, 2, -7, 5, -5, 8)

[node name="HurtBoxComponent2D" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 32
collision_mask = 4
script = ExtResource("9_0sa2f")
health_component = NodePath("../HealthComponent")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HurtBoxComponent2D"]
polygon = PackedVector2Array(0, 9, 5, 8, 7, 5, 7, 2, 5, 0, 0, -1, -5, 0, -7, 2, -7, 5, -5, 8)

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("10_b6nhn")
max_health = 30

[node name="TetherableArea2D" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TetherableArea2D"]
shape = SubResource("CircleShape2D_3jyob")

[connection signal="finished" from="CPUParticles2D" to="." method="_on_cpu_particles_2d_finished"]
[connection signal="Hit" from="HurtBoxComponent2D" to="." method="hit"]
[connection signal="Died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="mouse_entered" from="TetherableArea2D" to="." method="_on_tetherable_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="TetherableArea2D" to="." method="_on_tetherable_area_2d_mouse_exited"]
